# VPU

./: .flake8  .gitignore  Dockerfile  README.md  choco.bat  pyproject.toml  start.bat  stop.bat
jenkins/: pull-request.groovy  release.groovy
src/microservice_template/: app.py  utils.py
tests/: conftest.py  test_base_apis.py  test_logging.py
tests/fixtures/: sample.json
